istio-config/07_security/frontend_mtls_strict.yaml
apiVersion: security.istio.io/v1beta1
kind: "PeerAuthentication"
metadata:
  name: frontend-policy
spec:
  selector:
    matchLabels:
      name: frontend
  mtls:
    mode: STRICT
