istio-config/07_security/mtls-currency.yaml

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend-policy
spec:
  selector:
    matchLabels:
      name: currency-provider-external
  mtls:
    mode: PERMISSIVE
