istio-config/07_security/diagnose.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnose
spec:
  containers:
  - image: joergm/diagnose
    name: diagnose
