istio-config/07_security/loadgenerator_no_inject.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Pod
metadata:
  name: loadgenerator
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  terminationGracePeriodSeconds: 5
  restartPolicy: Never
  containers:
  - name: main
    image: gcr.io/k8s-training-248212/hipstershop/loadgenerator:63ec966
    resources:
      requests:
        cpu: 300m
        memory: 256Mi
      limits:
        cpu: 500m
        memory: 512Mi
