istio-config/07_security/mtls-rules.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: adservice-istio-client-mtls
spec:
  host: adservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: cartservice-istio-client-mtls
spec:
  host: cartservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: checkoutservice-istio-client-mtls
spec:
  host: checkoutservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: currencyservice-istio-client-mtls
spec:
  host: currencyservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: emailservice-istio-client-mtls
spec:
  host: emailservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: paymentservice-istio-client-mtls
spec:
  host: paymentservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: productcatalogservice-istio-client-mtls
spec:
  host: productcatalogservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: shippingservice-istio-client-mtls
spec:
  host: shippingservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: recommendationservice-istio-client-mtls
spec:
  host: recommendationservice.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: frontend-istio-client-mtls
spec:
  host: frontend.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

---

apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: frontend-ingress-istio-client-mtls
spec:
  host: frontend-ingress.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
